# tongues

./: .gitignore  README.md  pyproject.toml
src/tongues/: __init__.py  __main__.py  alignment.py  cli.py  config.py  status.py  vault.py
