[project]
name = "tongues"
version = "0.1.0"
description = "Coordinates continuous translation of Obsidian vaults into multiple languages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
tongues = "tongues.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tongues"]
